2006-11-15  Rex Feany  <laeos@laeos.net>

	* make compile on 64 bit linux system
	* Released 0.13.2

2005-11-29  Rex Feany  <laeos@laeos.net>

	* Fixed a few bugs with ssl/ipv6 handling
	  and -H, /hostname command
	* Released 0.13.1