@@ -1,3 +1,11 @@
+2006-12-17  Rex Feany  <laeos@laeos.net>
+
+	* xscandir.c - fix scandir() brokenness, just cast dselect to void so
+	  that it will work no matter if scandir expects const or non-const 
+	* ircaux.[ch] - remove vsnprintf/snprintf - configure.ac wasn't even checking for
+	  them and the overrides were silly and broken.
+	* merged some freebsd ports patches
+
 2006-11-15  Rex Feany  <laeos@laeos.net>
 
 	* make compile on 64 bit linux system
